# TrekkTecOS

./: .gitignore  CMakeLists.txt  Makefile  README.md  linker.ld  openocd.cfg  platformio.ini  startup.c  test.s  test2.s  upload.jlink
.github/workflows/: codeql-analysis.yml
include/: bool.h  dma.h  flash.h  gpio.h  nucleduino.h  nucleoduino.h  power.h  rcc.h  register.h  stm32l452re.h  systick.h  trekktecos.h  uart.h
include/mcu/: stm32l452re.h  stm32l496zg.h
include/mcu/stm32l452re/: stm32l452re_flash.h  stm32l452re_gpio.h  stm32l452re_power.h  stm32l452re_rcc.h  stm32l452re_systick.h
include/mcu/stm32l496zg/: stm32l496zg_dma.h  stm32l496zg_flash.h  stm32l496zg_gpio.h  stm32l496zg_power.h  stm32l496zg_rcc.h  stm32l496zg_systick.h  stm32l496zg_uart.h  stm32l496zg_usart.h
linkerscripts/: stm32l496zg.ld
src/: dma.c  flash.c  gipo.c  gpio.c  main.c  power.c  rcc.c  register.c  stm32l452re.c  systick.c  uart.c  usermain.c
src/mcu/: STM32L496ZG.c  stm32l452re.c
src/mcu/stm32l496zg/: stm32l496zg_dma.c  stm32l496zg_rcc.c  stm32l496zg_uart.c
startupCodes/: stm32l452re_startup.c  stm32l496zg_startup.c
